# freshrss-to-hugo

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  sync_favorites.py
